[project]
name = "hmmpy"
version = "0.1.0"
description = "Hidden Markov Models in Python - based on Rabiner (1989) tutorial"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Michael Hamilton", email = "mike.hamilton7@gmail.com"},
]
keywords = ["hmm", "hidden-markov-models", "machine-learning", "pattern-recognition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "einops>=0.7",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.5",
    "pytest-cov>=4.1",
    "hypothesis>=6.100",
    "types-networkx",
]
docs = [
    "jupyter-book==1.0.0",
    "pydata-sphinx-theme>=0.14",
    "networkx>=3.0",
]
notebook = [
    "jupyterlab>=4.0",
    "ipykernel>=6.25",
]
all = [
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.5",
    "pytest-cov>=4.1",
    "hypothesis>=6.100",
    "types-networkx",
    "jupyter-book==1.0.0",
    "pydata-sphinx-theme>=0.14",
    "networkx>=3.0",
    "jupyterlab>=4.0",
    "ipykernel>=6.25",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hmm = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "N801",  # Keep HMM_Classifier for Rabiner tutorial compatibility
    "N803",  # Keep A, B, Pi, etc. for Rabiner tutorial compatibility
    "N806",  # Keep raw_A, B_raw for Rabiner tutorial compatibility
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
